# pagerangers-skill

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  README.md  SKILL.md  composer.json  pyproject.toml  renovate.json
.claude-plugin/: plugin.json
.github/workflows/: auto-merge-deps.yml  ci.yml  lint.yml  release.yml
docs/: ARCHITECTURE.md
evals/: evals.json
hooks/: hooks.json
references/: api-costs.md  error-handling.md  module-distinction.md  pagerangers-api.json  pagerangers-api.md  setup.md
scripts/: detect_credentials.py  pagerangers.py
tests/: conftest.py  test_detect_credentials.py  test_pagerangers.py
